--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dj-database-url = "^1.2.0"
 django-bootstrap4 = "^22.3"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.5"
+whitenoise = "^6.3.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
