--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-bootstrap4 = "^22.3"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.5"
 whitenoise = "^6.3.0"
+django-filter = "^22.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
