--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,3 +8,6 @@ plugins:
     - "task_manager/labels/forms.py"
     - "task_manager/labels/models.py"
     - "task_manager/labels/views.py"
+    - "task_manager/statuses/forms.py"
+    - "task_manager/statuses/views.py"
+    - "task_manager/tasks/filters.py"
