--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.5"
 whitenoise = "^6.3.0"
 django-filter = "^22.1"
+rollbar = "^0.16.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
