--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,3 +13,4 @@ plugins:
     - "task_manager/statuses/views.py"
     - "task_manager/statuses/tests.py"
     - "task_manager/tasks/filters.py"
+    - "task_manager/tasks/tests.py"
