--- a/setup.cfg
+++ b/setup.cfg
@@ -10,19 +10,20 @@ doctests = True
 enable-extensions = G
 isort-show-traceback = True
 
-# clean default ignore list
 ignore =
 
 per-file-ignores =
-  # it is possibble to have prints in scripts
-  hexlet_python_package/scripts/*.py: WPS421
+  task_manager/settings.py:E501
+  task_manager/labels/migrations/*.py:E501
+  task_manager/statuses/migrations/*.py:E501
+  task_manager/tasks/migrations/*.py:E501
+  task_manager/users/migrations/*.py:E501
 
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
 
 [isort]
-# See https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
 include_trailing_comma = true
 default_section = FIRSTPARTY
